@@ -368,7 +368,8 @@ key f14           evaluate
 key esc O 2 Q     evaluate
 key esc [ 2 6 ~   evaluate
 key ctrl+alt+c    shell "ruby -c $f"
-key f10           execute "firefox http://apidock.com/ruby/$i"
+#key f10           spawn "firefox --display=:0 http://apidock.com/ruby/$i"
+#key f10           spawn "DISPLAY=:0 opera --remote 'openURL(http://www.ruby-doc.org/core-1.9/classes/$i.html,new-page)' 2>&1 > /dev/null"
 
 # To use the following:
 # 1) Copy to the clipboard some Ruby code which operates on stdin text and outputs to stdout.
