@@ -1338,6 +1338,26 @@ module Diakonos
       end
     end
 
+    def spawn( command_ = nil )
+      if command_.nil?
+        command = getUserInput( "Command: ", @rlh_shell )
+      else
+        command = command_
+      end
+
+      return  if command.nil?
+
+      command = subShellVariables( command )
+
+      Thread.new do
+        if system( command )
+          setILine "Return code #{$?} from '#{command}'"
+        else
+          setILine "Error code #{$?} executing '#{command}'"
+        end
+      end
+    end
+
     # Send the Diakonos job to background, as if with Ctrl-Z
     def suspend
       Curses::close_screen
